  the number of pixels for horizontal and vertical lines.
- libgwyapp: A helper function for interpolation of bad pixels upon data import
  was added.
- libgwydgets: Wrong x-axis value reported for mouse selection in GwyGraph in
  x-axis logarithmic mode was corrected.
- libgwydgets: 3D view shows data with non-suqare pixels with the physical
  aspect ratio.
- libgwydgets, libgwyapp: 3D view axes drawing can be globally disabled with
  "/app/3d/axes/disable" boolean True
  line in ~/.gwyddion/settings to work around broken OpenGL implementations.
- Some forgotten strings were made translatable and gettext() was applied to
  some to actually translate them.

Modules:
- Mark With (new): Create or modify a mask using another mask, data or
  presentation.
- Sensolytics (new): Imports Sensolytics file format.
- SPIP ASC (new): Imports text SPM files that look like exported from SPIP.
- MapVue (new): Imports MapVue data files (highly experimental).
- Gradient: New function for local slope azimuth presentation was added.
- Mask operations: Attach Mask was removed, superseded by Mark With.
- Profile, Roughness tools: Subsampling of the profile for some directions of
  purely horizontal/vertical lines was fixed.
- Distance, Profile and Path leven tools: The maximum number of lines was
  increased to 1024.
- PNI file: Vertical flipping was removed.
- Many modules: Translation problems were corrected.


2.13 (2009-02-09)
Application:
- Translations updated: Czech, French, Russian.

Modules:
- Raw graph import (new): Imports simple two-column text files as graphs.
- Distance, Stats and Rougness tools: Copy to clipboard buttons actually work
  (in 2.12 Save button did both actions and Copy did not do anything).
- Nanoscope: Physical y-size is recalculated to conserve the pixel
  y-size/x-size ratio in all files now.  This affects non-square images.
- Stats tool: Angles are exported in degrees as stated, instead of radians.